<resources>
    <string name="app_name" translatable="false">Gastronomie Française</string>
    <string name="content">Eiffel Tower Image</string>
    <string name="name_hint">Please enter your name</string>
    <string name="welcome">Welcome to the quiz on gastronomie Française! A mini test on your knowledge of French food and wine. Please enter your name to begin</string>
    <string name="question1">Q.1. What is displayed in the image below?</string>
    <string name="pates" translatable="false">Pâtes</string>
    <string name="chips" translatable="false">Chips</string>
    <string name="frites" translatable="false">Frites</string>
    <string name="crepes" translatable="false">Crêpes</string>
    <string name="question2">Q.2. Which dessert is shown below?</string>
    <string name="milleFeuille" translatable="false">Mille-Feuille</string>
    <string name="cremeChantilly" translatable="false">Crème chantilly</string>
    <string name="opera" translatable="false">Opéra</string>
    <string name="cremeBrulee" translatable="false">Crème brûlée</string>
    <string name="question3">Q.3. Which classic dish is served like below?</string>
    <string name="ratatouille" translatable="false">Ratatouille</string>
    <string name="rillettes" translatable="false">Rillettes</string>
    <string name="raclette" translatable="false">Raclette</string>
    <string name="raisin" translatable="false">Raisin</string>
    <string name="question4">Q.4. Which of the following contains no alcohol?</string>
    <string name="question5">Q.5. What is contained within this box?</string>
    <string name="question_hint">Please type here</string>
    <string name="question6">Q.6. Pain au chocolat is .......</string>
    <string name="question6Option1">The agony suffered when the French run out of chocolate</string>
    <string name="question6Option2">A French dessert</string>
    <string name="question6Option3">Typically served at breakfast</string>
    <string name="question6Option4">A French pastry</string>
    <string name="question7">Q.7. Drinking a new wine each night, roughly how many years would it take to drink your way through France?</string>
    <string name="years10" translatable="false">10</string>
    <string name="years8" translatable="false">8</string>
    <string name="years15" translatable="false">15</string>
    <string name="years5" translatable="false">5</string>
    <string name="question8">Q.8. French wine is less about grapes than about the soil?</string>
    <string name="question8Option1">True</string>
    <string name="question8Option2">False</string>
    <string name="select2">Please select at least 2 answers</string>
    <string name="results">Results</string>
    <string name="welcomeMessage">Hi </string>
    <string name="scoreResults">You scored</string>
    <string name="between">out of</string>
    <string name="reset">Reset</string>
</resources>
