<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:contentDescription="@string/content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:fontFamily="@font/frenchvanillaswirlitalic"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/title"
                android:textSize="@dimen/h1" />


            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:background="@drawable/layout_bg"
                android:padding="@dimen/tv_padding"
                android:text="@string/welcome"
                android:textSize="@dimen/tv_size" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:hint="@string/name_hint"
                android:imeOptions="actionDone"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:background="@drawable/layout_bg"
                android:padding="@dimen/tv_padding"
                android:text="@string/question1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:adjustViewBounds="true"
                android:src="@drawable/french_fries" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/def_margin"
                android:layout_marginTop="@dimen/sm_margin"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rg1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sm_margin"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/pates"
                        style="@style/rb1"
                        android:text="@string/pates" />

                    <RadioButton
                        android:id="@+id/chips"
                        style="@style/rb1"
                        android:text="@string/chips" />

                    <RadioButton
                        android:id="@+id/frites"
                        style="@style/rb1"
                        android:text="@string/frites" />

                    <RadioButton
                        android:id="@+id/crepes"
                        style="@style/rb1"
                        android:layout_marginBottom="@dimen/def_margin"
                        android:text="@string/crepes" />

                </RadioGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:background="@drawable/layout_bg"
                android:padding="@dimen/tv_padding"
                android:text="@string/question2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:adjustViewBounds="true"
                android:src="@drawable/jc_fav" />

            <RadioGroup
                android:id="@+id/rg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/sm_margin"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/mille_feuille"
                    style="@style/rb2"
                    android:text="@string/milleFeuille" />

                <RadioButton
                    android:id="@+id/creme_chantilly"
                    style="@style/rb2"
                    android:text="@string/cremeChantilly" />

                <RadioButton
                    android:id="@+id/opera"
                    style="@style/rb2"
                    android:text="@string/opera" />

                <RadioButton
                    android:id="@+id/creme_brulee"
                    style="@style/rb2"
                    android:text="@string/cremeBrulee" />

            </RadioGroup>

            <TextView
                android:id="@+id/question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:background="@drawable/layout_bg"
                android:padding="@dimen/tv_padding"
                android:text="@string/question3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/def_margin"
                android:layout_marginHorizontal="90dp"
                android:layout_marginTop="@dimen/def_margin"
                android:adjustViewBounds="true"
                android:src="@drawable/raclette" />

            <RadioGroup
                android:id="@+id/rg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/sm_margin"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/ratatouille"
                    style="@style/rb2"
                    android:text="@string/ratatouille" />

                <RadioButton
                    android:id="@+id/rillettes"
                    style="@style/rb2"
                    android:text="@string/rillettes" />

                <RadioButton
                    android:id="@+id/raclette"
                    style="@style/rb2"
                    android:text="@string/raclette" />

                <RadioButton
                    android:id="@+id/raisin"
                    style="@style/rb2"
                    android:text="@string/raisin" />

            </RadioGroup>

            <TextView
                android:id="@+id/question4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:background="@drawable/layout_bg"
                android:padding="@dimen/tv_padding"
                android:text="@string/question4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    style="@style/q4ImageView"
                    android:scaleType="centerCrop"
                    android:src="@drawable/petrus_1990" />

                <ImageView
                    style="@style/q4ImageView"
                    android:scaleType="centerCrop"
                    android:src="@drawable/grape" />

                <ImageView
                    style="@style/q4ImageView"
                    android:src="@drawable/grenadine" />

                <ImageView
                    style="@style/q4ImageView"
                    android:src="@drawable/ice_wine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/def_margin"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/q4cb1"
                    style="@style/cb1" />

                <CheckBox
                    android:id="@+id/q4cb2"
                    style="@style/cb1" />

                <CheckBox
                    android:id="@+id/q4cb3"
                    style="@style/cb1" />

                <CheckBox
                    android:id="@+id/q4cb4"
                    style="@style/cb1"
                    android:layout_marginBottom="@dimen/def_margin"/>

            </LinearLayout>

            <TextView
                android:id="@+id/question5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:background="@drawable/layout_bg"
                android:padding="@dimen/tv_padding"
                android:text="@string/question5" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="90dp"
                android:layout_marginTop="@dimen/sm_margin"
                android:adjustViewBounds="true"
                android:src="@drawable/lindt" />

            <EditText
                android:id="@+id/question5TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:hint="@string/question_hint"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <TextView
                android:id="@+id/question6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:background="@drawable/layout_bg"
                android:padding="@dimen/tv_padding"
                android:text="@string/question6" />

            <CheckBox
                android:id="@+id/q6cb1"
                style="@style/cb2"
                android:text="@string/question6Option1" />

            <CheckBox
                android:id="@+id/q6cb2"
                style="@style/cb2"
                android:text="@string/question6Option2" />

            <CheckBox
                android:id="@+id/q6cb3"
                style="@style/cb2"
                android:text="@string/question6Option3" />

            <CheckBox
                android:id="@+id/q6cb4"
                style="@style/cb2"
                android:text="@string/question6Option4" />

            <TextView
                android:id="@+id/question7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:background="@drawable/layout_bg"
                android:padding="@dimen/tv_padding"
                android:text="@string/question7" />

            <RadioGroup
                android:id="@+id/rg7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/years10"
                    style="@style/rb3"
                    android:text="@string/years10" />

                <RadioButton
                    android:id="@+id/years8"
                    style="@style/rb3"
                    android:text="@string/years8" />

                <RadioButton
                    android:id="@+id/years15"
                    style="@style/rb3"
                    android:text="@string/years15" />

                <RadioButton
                    android:id="@+id/years5"
                    style="@style/rb3"
                    android:text="@string/years5" />

            </RadioGroup>

            <TextView
                android:id="@+id/question8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:background="@drawable/layout_bg"
                android:padding="@dimen/tv_padding"
                android:text="@string/question8" />

            <RadioGroup
                android:id="@+id/rg8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question8True"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:text="@string/question8Option1" />

                <RadioButton
                    android:id="@+id/question8False"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:text="@string/question8Option2" />

            </RadioGroup>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/def_margin">

            <Button
                android:id="@+id/results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:background="@drawable/layout_bg"
                android:padding="@dimen/def_margin"
                android:text="@string/results" />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:background="@drawable/layout_bg"
                android:padding="@dimen/def_margin"
                android:text="@string/reset" />
                </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>